--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fontsource/noto-sans-bengali": "^4.5.3",
+    "jquery": "^3.6.0",
+    "jquery.bangla": "^1.3.1",
     "@heroicons/react": "^1.0.6",
     "react": "16.11.0",
     "react-dom": "16.11.0",
